--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.5",
+    "twilio": "^5.3.7"
   }
 }
